# dltui

./: Cargo.toml  README.md
docs/: specification.md
src/: app.rs  main.rs
src/app/: mod.rs  state.rs
src/config/: mod.rs  settings.rs
src/filter/: criteria.rs  engine.rs  mod.rs
src/parser/: dlt_file.rs  dlt_message.rs  index.rs  mod.rs
src/search/: engine.rs  mod.rs
src/ui/: event.rs  mod.rs  theme.rs
src/ui/views/: command_line.rs  detail_view.rs  file_browser.rs  help.rs  log_list.rs  mod.rs  status_bar.rs
